--- a/Codigo/nbproject/project.properties
+++ b/Codigo/nbproject/project.properties
@@ -30,13 +30,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.DateChooser.jar=Date Chooser Plugin\\lib\\DateChooser.jar
+file.reference.jcalendar-1.4.jar=lib\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.beans-binding.classpath}:\
     ${libs.DateChooser.classpath}:\
     ${libs.JCalendar.classpath}:\
-    ${file.reference.DateChooser.jar}
+    ${file.reference.DateChooser.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
